# campaign_rules

./: .gitignore  CLAUDE.md  FRONTEND_PLAN.md  PROJECT.md  README.md  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 1d2f3a4b5c6d_add_script_actions_table.py  5fd725565ab9_initial_schema.py  d79f8c97dd43_add_label_to_rule_edges.py
backend/app/: config.py  database.py  main.py
backend/app/api/: attributes.py  campaign_members.py  campaigns.py  communications.py  contacts.py  events.py  rules.py  script_actions.py
backend/app/engine/: actions.py  conditions.py  context.py  executor.py  scripting.py
backend/app/models/: __init__.py  attribute.py  campaign.py  campaign_member.py  communication.py  contact.py  rule.py  script_action.py
backend/app/schemas/: attribute.py  campaign.py  campaign_member.py  communication.py  contact.py  events.py  rule.py  script_action.py
backend/app/services/: attribute_validator.py  event_service.py
backend/tests/: conftest.py
backend/tests/test_api/: test_crud.py
backend/tests/test_engine/: test_attribute_validation.py  test_conditions.py  test_executor.py  test_scripting.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/api/: attributes.ts  campaign-members.ts  campaigns.ts  client.ts  communications.ts  contacts.ts  events.ts  rules.ts  script-actions.ts
frontend/src/components/: CodeEditor.tsx
frontend/src/editor/: ConfigPanel.tsx  NodePalette.tsx  RuleFlowEditor.tsx
(+43 files in other folders)
